[tool.poetry]
name = "pythonlike"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sibula/pythonlike"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
tcod = "^16.2"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
coverage = {version = "^7.6.7", extras = ["toml"]}
mypy = "^1.13.0"
pyupgrade = "^3.19.0"
pep8-naming = "^0.14.1"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
flake8-bugbear = "^24.10.31"

[tool.poetry.scripts]
pythonlike = "pythonlike.src.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pythonlike", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
