[project]
name = "pythonlike"
description = ""
version = "0.1.0"
authors = [{ name = "Valtteri Asikainen" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<4.0"
dependencies = [
    "tcod>=16.2,<17.0",
    "numpy>=2.1.3,<3.0.0",
]

[project.urls]
repository = "https://github.com/Sibula/pythonlike"

[project.scripts]
pythonlike = "pythonlike.src.__main__:main"

[tool.uv]
default-groups = ["dev"]
package = true
cache-dir = "./.uv_cache"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "coverage[toml]>=7.6.7,<8.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pre-commit>=4.0.1,<5.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "B9",   # flake8-bugbear opinionated
    "C4",   # flake8-comprehensions
    "C901", # McCabe complexity
    "COM",  # flake8-commas
    #"D",   # pydocstyle
    "E",    # pycodestyle errors
    "EM",   # flake8-errmsg
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FURB", # refurb
    "I",    # isort
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules
    "PTH",  # flake8-use-pathlib
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
extend-ignore = [
    "E501",   # line-length
    "COM812", # Trailing comma missing - can conflict with formatter
]
extend-unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pythonlike", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
